# afterglow

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml  onair-rig.yml
components/afterglow_core/: CMakeLists.txt  ag_eligible.c  ag_eviction.c  ag_meshguard.c  ag_prng.c  ag_subset.c  ag_txad.c  ag_txwalk.c
components/afterglow_core/include/ag_core/: ag_eligible.h  ag_eviction.h  ag_meshguard.h  ag_prng.h  ag_subset.h  ag_txad.h  ag_txwalk.h
components/capture/: CMakeLists.txt  capture.c
components/capture/include/: capture.h
components/classifier/: CMakeLists.txt  classifier.c  classifier_logic.c
components/classifier/include/: classifier.h  classifier_logic.h
components/config/: CMakeLists.txt  config.c
components/config/include/: afterglow_config.h
components/entropy/: CMakeLists.txt  entropy.c
components/entropy/include/: entropy.h
components/lifecycle/: CMakeLists.txt  lifecycle.c  lifecycle_logic.c
components/lifecycle/include/: lifecycle.h  lifecycle_logic.h
components/mesh/: CMakeLists.txt  mesh.c  mesh_logic.c
components/mesh/include/: mesh.h  mesh_logic.h
components/pool/: CMakeLists.txt  pool.c  pool_logic.c
components/pool/include/: pool.h  pool_logic.h
components/radio_backend/: CMakeLists.txt
components/radio_backend/include/: radio_backend.h
components/radio_single/: CMakeLists.txt  radio_single.c
components/radio_single/include/: radio_single.h
components/replay/: CMakeLists.txt  replay.c
components/replay/include/: replay.h
components/txentropy/: CMakeLists.txt  txentropy.c
components/txentropy/include/: txentropy.h
main/: CMakeLists.txt  afterglow_main.c
test/: README.md
test/host/: CMakeLists.txt  test_adv_kind.c  test_classifier.c  test_config.c  test_eviction.c  test_lifecycle.c  test_mesh.c  test_mesh_collision.c  test_mesh_diffusion.c  test_meshguard.c  test_pool.c  test_subset.c  test_txad.c  test_txwalk.c  test_util.h
test/host/separability/: detector.c  detector.h  rssi_gen.h  test_aggregate_separability.c  test_eligibility.c  test_separability.c
test/host/separability/parity/: expected_vectors.json  gen_vectors.c
test/host/shim/: esp_err.h  esp_log.h  nvs.h
tools/adv-observer/: CMakeLists.txt  README.md  sdkconfig.defaults
tools/adv-observer/main/: CMakeLists.txt  adv_observer_main.c
tools/adv-stimulus/: CMakeLists.txt  README.md
tools/adv-stimulus/main/: CMakeLists.txt  adv_stimulus_main.c
tools/onair-test/: README.md  conftest.py  pytest.ini  test_ambient_variance.py  test_mesh_discovery.py  test_mesh_transfer.py  test_onair.py  test_rssi_power.py  test_separability_onair.py  test_separability_parity.py
tools/onair-test/rig/: __init__.py  board.py  ports.py  roles.py  separability.py  stabilize.py
